--- a/www/views/hardware.html
+++ b/www/views/hardware.html
@@ -1713,6 +1713,7 @@
 					<option value="2" data-i18n="Switch out">Switch out</option>
 					<option value="3" data-i18n="Switch in">Switch in</option>
 					<option value="4" data-i18n="Light 2 color">Light 2 color</option>
+					<option value="5" data-i18n="Humidity">Light 2 color</option>
 				</select>
 				</td>
 			</tr>
